test/files/neg/t278.scala
class C {
  class A
  def a = () => ()
  def a = (p:A) => ()
  println(a[A])
}
